@@ -9,6 +9,7 @@ import javax.swing.*;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.LogoPanel;
+import edu.colorado.phet.common.phetcommon.view.PhetTitledPanel;
 import edu.colorado.phet.common.phetcommon.view.VerticalLayoutPanel;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.fluidpressureandflow.model.FluidPressureAndFlowModel;
@@ -45,7 +46,7 @@ public class FluidPressureAndFlowControlPanel<T extends FluidPressureAndFlowMode
             super( label, property.getValue() );
             setBackground( BACKGROUND );
             setForeground( FOREGROUND );
-            setFont( CONTROL_FONT );
+            setFont( new PhetFont( 16, true ) );
             addActionListener( new ActionListener() {
                 public void actionPerformed( ActionEvent e ) {
                     property.setValue( isSelected() );
@@ -70,14 +71,14 @@ public class FluidPressureAndFlowControlPanel<T extends FluidPressureAndFlowMode
 //        addControlFullWidth( new WorkEnergyCheckBox( "Energy Bar Chart", module.getShowEnergyBarChartProperty() ) );
 //        addControlFullWidth( new WorkEnergyCheckBox( "Ruler", module.getShowRulerProperty() ) );
 
-//        addControlFullWidth( new PhetTitledPanel( "Units" ) {{
-//            setLayout( new BoxLayout( this, BoxLayout.Y_AXIS ) );
-//            setBackground( BACKGROUND );
-//            setForeground( FOREGROUND );
-//            add( new RadioButton( "Pascals (Pa)", new Property<Boolean>( true ) ) );
-//            add( new RadioButton( "atmospheres (atm)", new Property<Boolean>( false ) ) );
-//            add( new RadioButton( "pounds per square inch (psi)", new Property<Boolean>( false ) ) );
-//        }} );
+        addControlFullWidth( new PhetTitledPanel( "Units" ) {{
+            setLayout( new BoxLayout( this, BoxLayout.Y_AXIS ) );
+            setBackground( BACKGROUND );
+            setForeground( FOREGROUND );
+            add( new RadioButton( "Pascals (Pa)", new Property<Boolean>( true ) ) );
+            add( new RadioButton( "atmospheres (atm)", new Property<Boolean>( false ) ) );
+            add( new RadioButton( "<html>pounds per<br>square inch (psi)</html>", new Property<Boolean>( false ) ) );
+        }} );
         setBackground( BACKGROUND );
     }
 
